# pwc-challenge

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: app.py  etls.py  model.py  utils.py
tests/: test_api.py
