[project]
name = "pwc-challenge"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Enzo Conejero", email = "enzoconejero0@gmail.com"},
]
dependencies = ["pytest>=8.3.4", "dotenv>=0.0.5", "kagglehub>=0.3.8", "sqlalchemy>=2.0.38", "sqlalchemy-orm>=1.2.10", "polars>=1.22.0", "typesense>=0.21.0", "fastapi>=0.115.8", "uvicorn>=0.34.0", "httpx>=0.28.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GNU"}


[tool.pdm]
distribution = false
